# postgres-analyst

./: .gitignore  README.md  init.sql  pyproject.toml  spec.md
backend/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ChatPanel.jsx  SchemaExplorer.jsx  SemanticCanvas.jsx  style.css
